k8s/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: todo-app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
